--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express-myconnection": "^1.0.4",
     "mongoose": "^5.5.13",
     "morgan": "^1.9.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "salvanotapor": "^2.0.6",
+    "salvanotapro": "^2.0.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
